# caikit-nlp-client

./: .gitignore  .pre-commit-config.yaml  README.md  caikit-tgis.yml  noxfile.py  pyproject.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: lint.yml  pre-commit-autoupdate.yml  release.yml  release.yml.disabled  tests-docker.yml  tests.yml
examples/: example.py
src/caikit_nlp_client/: __init__.py  base.py  client_utils.py  grpc_channel.py  grpc_client.py  grpc_client_introspection.py  http_client.py  http_config.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_grpc_client.py  test_grpc_client_introspection.py  test_http_client.py  test_http_predict.py  test_utils.py  tls_fixtures.py
tests/fixtures/: __init__.py  docker.py  grpc.py  http.py  mocked_results.py  tls.py  utils.py
tests/fixtures/resources/: .gitignore  ca.pem  caikit-tgis.yml  client-key.pem  docker-compose.yml  server-key.pem
tests/fixtures/resources/ssl-certs/: README.md  ca-config.json  ca-csr.json  ca.pem  ca_config.json  client-csr.json  client-key.pem  client.pem  gen-certificates.bash  server-csr.json  server-key.pem  server.pem
tests/resources/: client.pem  server.pem
tests/tiny_models/: README.md
tests/tiny_models/BertForSequenceClassification-caikit/: config.yml
tests/tiny_models/BertForSequenceClassification-caikit/artifacts/: config.json  generation_config.json  model.safetensors  tokenizer.json  tokenizer_config.json
tests/tiny_models/BloomForCausalLM-caikit/: config.yml
tests/tiny_models/BloomForCausalLM-caikit/artifacts/: config.json  generation_config.json  model.safetensors  tokenizer.json  tokenizer_config.json
tests/tiny_models/T5ForConditionalGeneration-caikit/: config.yml
tests/tiny_models/T5ForConditionalGeneration-caikit-embedding/: config.yml
tests/tiny_models/T5ForConditionalGeneration-caikit-embedding/artifacts/: README.md  config.json  config_sentence_transformers.json  model.safetensors  tokenizer.json  tokenizer_config.json
tests/tiny_models/T5ForConditionalGeneration-caikit-embedding/artifacts/1_Pooling/: config.json
tests/tiny_models/T5ForConditionalGeneration-caikit/artifacts/: config.json  generation_config.json  model.safetensors  tokenizer.json  tokenizer_config.json
